2002-08-16  Johan Dahlin  <jdahlin@telia.com>

	* gtk/gdk.defs: Add null-ok to GdkWindow.set_cursor.
	Fixes #88463.

2002-07-23  James Henstridge  <james@daa.com.au>

	* configure.in: updated version number.

2002-07-20  James Henstridge  <james@daa.com.au>

	* gtk/pygtkcellrenderer.c (pygtk_generic_cell_renderer_*): fix up
	arguments, and use "O" format code for PyObject_CallMethod --
	can't rely on "N" causing the argument to be unrefed.

	* gtk/gtk.override (_wrap_gtk_cell_renderer_get_size): cell_area
	is an argument; not a return.

	* gtk/gtk.override (GtkTreeModel.tp_as_number): add nonzero method
	to tree models, so that they evaluate to a truth value even if
	they have zero elements. (at request of msw).

	* gtk/gtk-extrafuncs.defs, gtk/gtk.override: add GenericCellRenderer.

	* gtk/pygtkcellrenderer.[ch]: add "generic" cell renderer code,
	based on jrb's work.

2002-07-18  James Henstridge  <james@daa.com.au>

	* gtk/Makefile.am (glademodule_la_LDFLAGS): fix up
	-export-symbols-regex flag.
	(glmodule_la_LDFLAGS): same here.

2002-07-15  James Henstridge  <james@daa.com.au>

	* gtk/gtk-types.c (pygtk_tree_model_row_getsets): add next,
	parent, model and path attributes to row objects.
	(pygtk_tree_model_row_methods): add an iterchildren() method to
	row objects.

	* gtk/gtk.override (pygtk_register_classes): rather than #defines,
	set the tp_as_mapping and tp_iter members of GtkListStore, etc in
	the init func.

	* gtk/gtk.override (_wrap_gtk_list_store_tp_iter): iter(liststore)
	returns a gtk.TreeModelRowIter object.

	* gtk/gtk-types.c (PyGtkTreeModelRowIter_Type): new iterator type
	that returns a sequence of gtk.TreeModelRow objects for nodes
	under a particular parent node.

2002-07-13  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (GtkListStore.tp_as_mapping): explicitly define
	this, as PyType_Ready doesn't seem to inherit special methods from
	secondary bases correctly.
	(GtkTreeStore.tp_as_mapping): same here.
