@@ -3812,7 +3812,7 @@
   )
 )
 
-(define-method gtk_drag_source_set_icon_stock
+(define-method drag_source_set_icon_stock
   (of-object "GtkWidget")
   (c-name "gtk_drag_source_set_icon_stock")
   (return-type "none")
@@ -8768,7 +8768,7 @@
   (return-type "GtkStyle*")
 )
 
-(define-function gtk_rc_get_style_by_paths
+(define-function rc_get_style_by_paths
   (c-name "gtk_rc_get_style_by_paths")
   (return-type "GtkStyle*")
   (parameters
@@ -14643,7 +14643,7 @@
   (return-type "none")
   (parameters
     '("GtkTreePath*" "path")
-    '("GtkTreeViewColumn*" "column")
+    '("GtkTreeViewColumn*" "column" (null-ok))
     '("gboolean" "use_align")
     '("gfloat" "row_align")
     '("gfloat" "col_align")
