@@ -1,3 +1,10 @@
+2002-08-17  James Henstridge  <james@daa.com.au>
+
+	* pygtype.c (pyg_value_from_pyobject): allow None when converting
+	to string GValue (bug picked up by Thomas Leonard.
+
+	* gtk/gtk.defs (scroll_to_cell): allow column to be None (bug #90398).
+
 2002-08-16  Johan Dahlin  <jdahlin@telia.com>
 
 	* gtk/gdk.defs: Add null-ok to GdkWindow.set_cursor.
